Fixing text area spacing

--- a/css/index.css
+++ b/css/index.css
@@ -97,13 +97,12 @@ body {
 textarea {
 	resize: vertical;
 	font-size: 0.8rem;
-    letter-spacing: 1px;
-	padding: 10px;
-    max-width: 100%;
-    line-height: 1.5;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px #999;
+	padding: 5px;
+	max-width: 100%;
+	line-height: 1.5;
+	border-radius: 5px;
+	border: 1px solid #ccc;
+	box-shadow: 1px 1px 1px #999;
 }
 
 .nodeOuts {
